core service api test

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -332,5 +332,5 @@
 <!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-
+<p>Health Status: {{ health }}</p>
 <router-outlet />
