--- a/src/app/core/navbar/navbar.component.scss
+++ b/src/app/core/navbar/navbar.component.scss
@@ -8,8 +8,12 @@
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
   .navbar-left {
+    display: flex;
+    align-items: center;
+    gap: 12px;
     font-weight: 600;
     font-size: 1rem;
+
   }
 
   .navbar-center {
