--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,8 +3,9 @@
 html, body {
   height: 100%;
   margin: 0;
-  padding-top: 50px;
+  padding-top: 60px;
   font-family: 'Montserrat', sans-serif;
+  overflow-y: hidden;
 }
 
 body {
