--- a/src/app/features/account/containers/auth-shell/auth-shell.component.html
+++ b/src/app/features/account/containers/auth-shell/auth-shell.component.html
@@ -1,11 +1,11 @@
 <div class="page page--center">
   <div class="auth-container" [class.right-panel-active]="rightPanelActive()" id="container">
     <div class="form-container sign-up-container">
-      <app-sign-up />
+      <app-sign-up [resetTrigger]="signUpReset()" />
     </div>
 
     <div class="form-container sign-in-container">
-      <app-sign-in />
+      <app-sign-in [resetTrigger]="signInReset()" />
     </div>
 
     <div class="overlay-container">
