--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@ html, body {
   margin: 0;
   padding-top: 60px;
   font-family: 'Montserrat', sans-serif;
+  overscroll-behavior: none;
 }
 
 body {
